--- a/deliverables/_static/theme.css
+++ b/deliverables/_static/theme.css
@@ -8,13 +8,13 @@ h1 {
 }
 
 .wy-side-nav-search {
-    background-color: #0A8754;
+    background-color: #22CB43;
 }
 
 .wy-menu-vertical header, .wy-menu-vertical p.caption {
-    color: #0A8754;
+    color: #22CB43;
 }
 
 .wy-nav-top {
-    background: #0A8754;
+    background: #22CB43;
 }
